# cortex-platform

./: .gitignore  AGENT_FRAMEWORK.md  QUICKSTART.md  README.md  package.json
.github/workflows/: build-and-deploy.yaml
agents/: README.md  __init__.py  base_master.py  base_worker.py  lifecycle.py  messaging.py  registry.py  requirements.txt
coordination/: dashboard-events.jsonl  health-alerts.json  pm-state.json  token-budget.json  worker-pool.json  workforce-streams.json
coordination/config/: anthropic-credentials.sh
coordination/contractors/: infrastructure-contractor-patterns.md  talos-contractor-patterns.md
coordination/events/: daemon-supervisor-events.jsonl  heartbeat-events.jsonl  learning-events.jsonl  zombie-cleanup-events.jsonl
coordination/governance/: access-log.jsonl
coordination/masters/: dashboard-events.jsonl
coordination/metrics/: auto-fix-daemon-metrics.json  auto-fix-history.jsonl  failure-pattern-history.jsonl  failure-pattern-metrics.json  heartbeat-monitor-history.jsonl  heartbeat-monitor-metrics.json  llm-costs.jsonl  model-selection.jsonl  quality-alerts.jsonl  security-scan-history.jsonl  worker-restart-metrics.json
coordination/patterns/: failure-patterns.jsonl  pattern-index.json
coordination/tasks/: cortex-chat-integration-1766606813.json
docs/: MOE-ROUTING-FIX.md
docs/blog/: longhorn-snapshot-limits-preventing-disk-pressure.md
docs/claude-code-integration/: GAME_PLAN.md
docs/infrastructure/: k3s-cluster-configuration.md  layer-activator-guide.md  monitoring-exporters.md  tailscale-dns-configuration.md
examples/: agent_demo.py
examples/autonomous-demo/: .gitkeep  REALTIME_DEMO.txt  SYSTEM_TEST.md  demo-20251104-201027.txt  demo-20251104-201044.txt  demo-20251104-202512.txt  execution-log.txt
examples/implementations/: task-1762553453-implementation.md  task-launcher-test-001-implementation.md  task-v40-test-001-implementation.md
infrastructure/: init-container-template.yaml  k3s-worker03-repair.sh
infrastructure/storage/: longhorn-storageclasses.yaml
masters/: __init__.py  coordinator_master.py  security_master.py
scripts/: build-and-push.sh  install-cortex-bridge.sh  mcp-port-forward.sh  preflight-check.sh
scripts/cortex-cli/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT-OVERVIEW.md  QUICKSTART.md  README.md  SUMMARY.txt  cortex-k8s  cortex-k8s-completion.bash  cortex-k8s-completion.zsh  install.sh  test.sh
services/: README-CORTEX-SCHOOL.md  cortex-school-build.sh
services/anomaly-detector/: Dockerfile  requirements.txt
services/blog-writer/: app.py
services/c-top/: Dockerfile  QUICKSTART.md  README.md  launch.sh  pyproject.toml
services/c-top/src/c_top/: __init__.py  __main__.py  app.py  clients.py  layers.py
services/capacity-forecaster/: Dockerfile  requirements.txt
services/chat-layer-fabric/: README.md
services/coordinator/: Dockerfile  app.py  requirements.txt
services/cortex-bridge/: claude_desktop_config.json  main.py  requirements.txt
services/cortex-live/: DESIGN_UPGRADE.md  FEATURES.md  NEW_METRICS.md  build.sh  launch.sh  push.sh  pyproject.toml  test_install.sh
services/cortex-live/src/cortex_live/: __init__.py  __main__.py  api.py  app.py  screens.py  widgets.py
services/docs-curator/: Dockerfile  README.md  pyproject.toml
services/docs-curator/src/docs_curator/: __init__.py  curator.py
services/mcp-servers/checkmk/: README.md  pyproject.toml
services/mcp-servers/checkmk/src/mcp_checkmk/: __init__.py  server.py
services/mcp-servers/cortex-orchestrator/: DEPLOYMENT.md  Dockerfile  IMPLEMENTATION-COMPLETE.md  Makefile  QUICK-START.md  README.md  REST-API.md  __init__.py  pyproject.toml  requirements.txt
services/mcp-servers/cortex-orchestrator/k8s/: configmap.yaml  deployment.yaml  rbac.yaml
services/mcp-servers/cortex-orchestrator/server/: dynamic_limiter.py  main.py  models.py  orchestrator.py  pod_swapper.py  spawn_modulator.py  stuck_detector.py
services/mcp-servers/cortex-orchestrator/tests/: __init__.py  test_dynamic_limiter.py  test_pod_swapper.py  test_spawn_modulator.py  test_stuck_detector.py
services/mcp-servers/cortex-unified/: Dockerfile  README.md  pyproject.toml
services/mcp-servers/cortex-unified/charts/cortex-unified/: values.yaml
services/mcp-servers/cortex-unified/src/cortex_unified/: __init__.py  server.py
services/mcp-servers/cortex-unified/src/cortex_unified/clients/: __init__.py  chat_activator.py  mcp_passthrough.py  prometheus.py  qdrant.py  redis_client.py
services/mcp-servers/cortex-unified/src/cortex_unified/tools/: __init__.py  agents.py  chat.py  context.py  memory.py
services/mcp-servers/git-steer/: Dockerfile  git-steer.plist  pyproject.toml
services/mcp-servers/git-steer/src/git_steer/: __init__.py  git_ops.py  github_client.py  server.py  store.py
services/mcp-servers/github-security/: README.md  pyproject.toml
services/mcp-servers/github-security/src/mcp_github_security/: __init__.py  server.py
services/mcp-servers/kubernetes/: README.md  pyproject.toml
services/mcp-servers/kubernetes/src/mcp_kubernetes/: __init__.py  server.py
services/mcp-servers/langflow-chat/: Dockerfile  README.md  build.sh  pyproject.toml
services/mcp-servers/langflow-chat/src/mcp_langflow_chat/: __init__.py  server.py
services/mcp-servers/n8n/: README.md  pyproject.toml
services/mcp-servers/n8n/src/mcp_n8n/: __init__.py  server.py
services/mcp-servers/outline/: Dockerfile  README.md  pyproject.toml
services/mcp-servers/outline/src/mcp_outline/: __init__.py  server.py
services/mcp-servers/sandfly/: Dockerfile  README.md  build-job.yaml  deployment-without-docker.yaml  deployment.yaml  k8s-build-final.yaml  k8s-build-job-git.yaml  k8s-build-job.yaml  pyproject.toml
services/mcp-servers/sandfly/src/mcp_sandfly/: server.py
services/mcp-servers/tailscale/: pyproject.toml
services/mcp-servers/tailscale/src/mcp_tailscale/: __init__.py  server.py
testing/: FILES-CREATED.txt  IMPLEMENTATION-SUMMARY.md  README.md
workers/: __init__.py  github_security_worker.py  sandfly_worker.py
(+3571 files in other folders)
