[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-live"
version = "2.0.0"
description = "Real-time k3s cluster monitoring TUI for Cortex"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Cortex Team"}
]
dependencies = [
    "textual>=0.47.0",
    "kubernetes>=28.1.0",
    "prometheus-api-client>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
cortex-live = "cortex_live.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
