[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-curator"
version = "1.0.0"
description = "Automated documentation curation for Cortex knowledge base"
authors = [{name = "Cortex Platform", email = "noreply@cortex.local"}]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "schedule>=1.2.0",
    "pygithub>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
docs-curator = "docs_curator.curator:main"
