[project]
name = "checkmk-mcp-server"
version = "1.0.0"
description = "CheckMK MCP Server - Infrastructure monitoring integration for Cortex"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
checkmk-mcp = "mcp_checkmk.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
