[project]
name = "cortex-unified-mcp"
version = "0.1.0"
description = "Unified MCP server for Cortex Platform - routes through Chat Fabric, Memory, and Agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ry-ops", email = "ryan@ry-ops.dev" }
]
keywords = ["mcp", "cortex", "claude-code", "ai-assistant"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
cortex-unified = "cortex_unified.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_unified"]

[tool.ruff]
line-length = 100
target-version = "py311"
