[project]
name = "git-steer"
version = "0.1.0"
description = "Git operations MCP server for Cortex — handles all git/GitHub operations cluster-side and locally"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "pygithub>=2.1.0",
    "structlog>=24.0.0",
    "gitpython>=3.1.40",
]

[project.scripts]
git-steer = "git_steer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
