[project]
name = "github-security-mcp-server"
version = "1.0.0"
description = "GitHub Security MCP Server - Vulnerability detection and remediation for Cortex"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
github-security-mcp = "mcp_github_security.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
