[project]
name = "kubernetes-mcp-server"
version = "1.0.0"
description = "Kubernetes MCP Server - K8s cluster management for Cortex"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=28.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
kubernetes-mcp = "mcp_kubernetes.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
