[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-langflow-chat"
version = "1.0.0"
description = "MCP server for routing chat messages to Langflow workflows"
authors = [{name = "Cortex Platform", email = "noreply@cortex.local"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-langflow-chat = "mcp_langflow_chat.server:main"
