[project]
name = "n8n-mcp-server"
version = "1.0.0"
description = "n8n MCP Server - Workflow automation integration for Cortex"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
n8n-mcp = "mcp_n8n.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
