[project]
name = "mcp-sandfly"
version = "0.1.0"
description = "MCP Server for Sandfly Security - Agentless Linux intrusion detection"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ry-ops", email = "ryan@ry-ops.dev" }
]
keywords = ["mcp", "sandfly", "security", "intrusion-detection", "linux", "edr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
mcp-sandfly = "mcp_sandfly.server:main"

[project.urls]
Homepage = "https://github.com/ry-ops/mcp-sandfly"
Documentation = "https://github.com/ry-ops/mcp-sandfly#readme"
Repository = "https://github.com/ry-ops/mcp-sandfly.git"
Issues = "https://github.com/ry-ops/mcp-sandfly/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sandfly"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
