[project]
name = "mcp-tailscale"
version = "1.0.0"
description = "Tailscale MCP Server for network management, device control, ACL, DNS, and exit nodes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-tailscale = "mcp_tailscale.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
